[package]
name = "concat_video"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
google-cloud-storage = { version = "0.13.1" }
tokio = { version = "1.32.0", features = ["rt", "macros", "rt-multi-thread"] }
